Upgrade build and sources to Java 17