@@ -1,16 +1,16 @@
 buildscript {
     dependencies {
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.11'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.4'
     }
 }
 
 plugins {
-    id "com.github.hierynomus.license" version "0.15.0"
+    id "com.github.hierynomus.license" version "0.16.1"
     id 'com.github.sherter.google-java-format' version '0.9'
-    id 'net.ltgt.errorprone' version  '1.1.1'
+    id 'net.ltgt.errorprone' version  '3.1.0'
     id 'java-library'
     id 'jacoco'
-    id 'com.google.protobuf' version '0.8.11'
+    id 'com.google.protobuf' version '0.9.4'
     id("io.github.gradle-nexus.publish-plugin") version "1.3.0"  // Nexus publishing
 }
 
@@ -27,19 +27,17 @@ repositories {
         url 'https://plugins.gradle.org/m2/'
     }
     mavenCentral()
-    jcenter()
 }
 
 apply plugin: 'com.google.protobuf'
 apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'com.github.sherter.google-java-format'
 
 googleJavaFormat {
-    toolVersion '1.5'
+    toolVersion '1.15.0'
     include '**/*.java'
-    exclude '**/generated-sources/*'
+    exclude '**/generated/source/proto/**'
 }
 
 tasks.googleJavaFormat.dependsOn 'licenseFormat'
@@ -65,28 +63,28 @@ def getVersion() {
 description = '''Uber Cadence Java Client'''
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 dependencies {
-    errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
-    errorprone('com.google.errorprone:error_prone_core:2.3.4')
+    errorprone('com.google.errorprone:error_prone_core:2.24.1')
 
-    compile group: 'io.opentracing', name: 'opentracing-api', version: '0.33.0'
-    compile group: 'io.opentracing', name: 'opentracing-util', version: '0.33.0'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.10'
-    compile group: 'com.uber.m3', name: 'tally-core', version: '0.11.1'
-    compile group: 'com.google.guava', name: 'guava', version: '31.1-jre'
-    compile group: 'com.cronutils', name: 'cron-utils', version: '9.2.0'
-    compile group: 'io.micrometer', name: 'micrometer-core', version: '1.10.2'
-    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
-    compile group: 'com.auth0', name: 'java-jwt', version:'3.10.2'
-    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.21.9'
-    compile group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '2.10.0'
-    compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.21.9'
-    compile group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.35.0'
+    api group: 'io.opentracing', name: 'opentracing-api', version: '0.33.0'
+    api group: 'io.opentracing', name: 'opentracing-util', version: '0.33.0'
+    api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
+    api group: 'com.google.code.gson', name: 'gson', version: '2.10'
+    api group: 'com.uber.m3', name: 'tally-core', version: '0.11.1'
+    api group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+    api group: 'com.cronutils', name: 'cron-utils', version: '9.2.0'
+    api group: 'io.micrometer', name: 'micrometer-core', version: '1.10.2'
+    api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    api group: 'com.auth0', name: 'java-jwt', version:'3.10.2'
+    api group: 'com.google.protobuf', name: 'protobuf-java', version: '3.21.9'
+    api group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '2.10.0'
+    api group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.21.9'
+    api group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.35.0'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
@@ -96,12 +94,12 @@ dependencies {
     implementation 'io.grpc:grpc-protobuf:1.54.2'
     implementation 'io.grpc:grpc-stub:1.54.2'
 
-    compile("io.opentelemetry:opentelemetry-api:1.19.0")
+    api("io.opentelemetry:opentelemetry-api:1.19.0")
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
-    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    testCompile group: 'io.grpc', name: 'grpc-testing', version: '1.54.2'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testImplementation group: 'io.grpc', name: 'grpc-testing', version: '1.54.2'
     testImplementation 'io.opentracing:opentracing-mock:0.33.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.5.1'
     testImplementation "org.mockito:mockito-inline:4.5.1" // for mocking final classes
@@ -111,6 +109,15 @@ license {
     header rootProject.file('license-header.txt')
     skipExistingHeaders true
     excludes(["**/*.json", "**/idls","com/uber/cadence/*.java", "com/uber/cadence/shadower/*.java"]) // config files and generated code
+}
+
+// Code generated into the build directory (protobuf/grpc stubs) is not checked in,
+// so it is not subject to the license header check.
+tasks.withType(com.hierynomus.gradle.license.tasks.LicenseCheck).configureEach {
+    source = source.filter { !it.path.startsWith(buildDir.path) }
+}
+tasks.withType(com.hierynomus.gradle.license.tasks.LicenseFormat).configureEach {
+    source = source.filter { !it.path.startsWith(buildDir.path) }
 }
 
 task printVersion {
@@ -143,17 +150,17 @@ sourceSets {
 protobuf {
     protoc {
         if (osdetector.os == "osx") {
-            artifact = 'com.google.protobuf:protoc:3.11.0:osx-x86_64' // no arm version available
+            artifact = 'com.google.protobuf:protoc:3.21.9:osx-x86_64' // no arm version available
         } else {
-            artifact = 'com.google.protobuf:protoc:3.11.0'
+            artifact = 'com.google.protobuf:protoc:3.21.9'
         }
     }
     plugins {
         grpc {
             if (osdetector.os == "osx") {
-                artifact = 'io.grpc:protoc-gen-grpc-java:1.28.0:osx-x86_64' // no arm version available
+                artifact = 'io.grpc:protoc-gen-grpc-java:1.54.2:osx-x86_64' // no arm version available
             } else {
-                artifact = 'io.grpc:protoc-gen-grpc-java:1.28.0'
+                artifact = 'io.grpc:protoc-gen-grpc-java:1.54.2'
             }
         }
     }
@@ -167,25 +174,37 @@ protobuf {
     }
 }
 
-protobuf {
-    generatedFilesBaseDir = "$buildDir/generated-sources/proto"
-}
 idea {
     module {
-        sourceDirs += file("$buildDir/generated/main/java");
-        sourceDirs += file("$buildDir/generated/main/grpc");
+        sourceDirs += file("$buildDir/generated/source/proto/main/java");
+        sourceDirs += file("$buildDir/generated/source/proto/main/grpc");
     }
 }
 
-clean {
-    delete protobuf.generatedFilesBaseDir
+// Error Prone needs access to internal javac APIs on JDK 16+
+def errorproneJvmArgs = [
+        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+]
+
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs.addAll(errorproneJvmArgs)
 }
 
 compileJava {
     dependsOn 'googleJavaFormat'
     options.encoding = 'UTF-8'
     options.compilerArgs << '-Xlint:none' << '-Xlint:deprecation' << '-Werror'
-    options.errorprone.excludedPaths = '.*/generated-sources/.*'
+    options.errorprone.excludedPaths = '.*/generated/source/proto/.*'
     options.errorprone {
         disable('BadImport')
         disable('PreferJavaTimeOverload')
@@ -198,7 +217,7 @@ compileJava {
 compileTestJava {
     options.encoding = 'UTF-8'
     options.compilerArgs << '-Xlint:none' << '-Xlint:deprecation' << '-Werror'
-    options.errorprone.excludedPaths = '.*/generated-sources/.*'
+    options.errorprone.excludedPaths = '.*/generated/source/proto/.*'
     options.errorprone {
         disable('BadImport')
         disable('PreferJavaTimeOverload')
@@ -336,11 +355,14 @@ if (signingKeyId) {
 }
 
 task registerDomain(type:JavaExec) {
-    main = 'com.uber.cadence.RegisterTestDomain'
+    mainClass = 'com.uber.cadence.RegisterTestDomain'
     classpath = sourceSets.test.runtimeClasspath
 }
 
 test {
+    // Gson reflects over the private fields of JDK types such as Throwable and
+    // java.time.LocalDateTime, which the module system forbids by default on JDK 16+.
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.time=ALL-UNNAMED'
     dependsOn 'registerDomain'
     dependsOn 'licenseMain'
     finalizedBy jacocoTestReport // report is always generated after tests run
@@ -353,14 +375,14 @@ test {
 }
 
 jacoco {
-    toolVersion = "0.8.2"
+    toolVersion = "0.8.11"
 }
 
 jacocoTestReport {
     dependsOn test
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 
     afterEvaluate {
